Release v1.1.1, Tue 27 Jun 2017
=======================================================

  * pythia8 support
  * colored loggers
  * improved binary database
  * automated SLHA and LHE file detection
  * smodelsTools.py now also supports toolbox
  * C++ interface
  * Fix and improvements for missing topologies
  * Added SLHA-type output
  * Small improvements in interpolation and clustering

Release v1.1.0patch1, Tue 21 Feb 2017
=======================================================

  * pions added to final state particles
  * added full list of PIDs in asymmetric and long topologies coverage output
  * fix in CMS-SUS-12-024-eff, ATLAS-SUSY-2013-11-eff and CMS-SUS-13-013-eff

Release v1.1.0, Mon 23 Jan 2017 08:00:00 PM CET
=======================================================

  * the inclusion of efficiency maps
  * a new and more flexible database format
  * extended information on topology coverage
  * inclusion of likelihood and chi2 calculation for efficiency maps
  * inclusion of a database browser tool for easy access to the information
    stored in the database
  * the database now supports also a more efficient binary format
  * performance improvement for the decomposition of the input model
  * inclusion of new simplified results to the database
	  (including a few 13 TeV results)
  * fastlim efficiency maps can now also be used in SModelS

Release v1.0.4, Fri 11 Mar 2016 11:18:46 AM CET
=======================================================

  * @memoize bug fixed (Andre Lessa)
  * database.bib file included (Wolfgang Waltenberger)
  * README file updated (Jory Sonneveld and Wolfgang Waltenberger)


Release v1.0.3, Tue 17 Mar 2015 09:22:03 AM BRT
=======================================================

  * Sorting particles within vertices in missing topologies (Ursula Laa)


Release v1.0.2, Wed 25 Feb 2015 02:48:11 PM BRT
=======================================================

  * lepton summation fix in runSModelS (Ursula Laa)