@@ -33,7 +33,7 @@ dataselector= all ; Set all to use all upper limit and efficiency maps results i
 #Settings for result printout
 [printer]
 outputType = summary,stdout ;Define the output formats
-#available output formats: summary, stdout, log, python, xml (type log redirects stdout in *.log output file)
+#available output formats: summary, stdout, log, python, xml, slha (type log redirects stdout in *.log output file)
 
 #options for stdout and log format
 [stdout-printer]
@@ -51,6 +51,7 @@ expandedSummary = True ;Set True to print to file all applicable analyses, False
 #options for python printer
 [python-printer]
 addElementList = False ;Set True to print full list of elements to python and xml format, False elsewise. Note that these are all elements after decomposition and the list can be very long.
+addTxWeights = False ;Set True to print the weights of each topology/txname contributing to the total theory prediction value
 
 #options for xml printer
 [xml-printer]
