@@ -6,7 +6,7 @@ smodelsOutput = {
 'Mass (GeV)': [[991.3, 129.0], [865.0, 129.0]], 'maxcond': 0.0, 'expected upper limit (fb)': 0.235, 
 'likelihood': 0.198453, 'AnalysisID': 'ATLAS-CONF-2013-053', 
 'upper limit (fb)': 0.26, 'theory prediction (fb)': 8.58e-05, 
-'lumi (fb-1)': 20.1, 'TxNames': ['TGQbbq'], 'DataSetID': 'SRA mCT350'}, ...], 
+'lumi (fb-1)': 20.1, 'TxNames': ['TGQbbq'], 'TxNames weights (fb)': {'TGQbbq': 8.58e-05}, 'DataSetID': 'SRA mCT350'}, ...], 
 'Missed Topologies': [{'weight (fb)': 16.007591747903355, 'sqrts (TeV)': 8.0, 'element IDs': [270, 271, 272,...], 
 'element': '[[[jet],[W]],[[jet,jet],[W]]]'},...]
 'Outside Grid': [{'weight (fb)': 0.14400311772342284, 'sqrts (TeV)': 8.0, 'element': '[[[jet]],[[t,t]]]'},...], 
