@@ -28,5 +28,6 @@ addCoverageID = False
 expandedSummary = True
 [python-printer]
 addElementList = False
+addTxWeights = False
 [xml-printer]
 addElementList = False
