@@ -29,5 +29,6 @@ outputType = summary,python
 expandedSummary = True
 [python-printer]
 addElementList = False
+addTxWeights = False
 [xml-printer]
 addElementList = False
