@@ -1,3 +1,9 @@
+Release v1.x, ??
+=======================================================
+
+  * added option in python printer to print the contribution from each txname
+
+
 Release v1.1.1, Tue 27 Jun 2017
 =======================================================
 
